# snoozefest

./: .gitignore  DASHBOARD_EDIT_BUTTONS.md  DEPLOYMENT.md  HANDOFF.md  MIGRATION.md  Popup_Test.yaml  README.md  TIMER_UI_ROADMAP.md  alarms-dashboard-updated.yaml  cleanup-old-discovery.ps1  config.example.json  config.json  ha_dashboard_alarm_detail_popup_card.yaml  ha_dashboard_alarms_auto_list_card.yaml  ha_dashboard_timer_detail_popup_card.yaml  ha_dashboard_timers_auto_list_card.yaml  ha_dashboard_timers_simple_auto_list_card.yaml  ha_time_picker_bridge_automation.yaml  ha_time_picker_load_from_alarm_automation.yaml  ha_time_picker_mode_test_card.yaml  ha_voice_master_automation.yaml  ha_voice_ringing_announce_automation.yaml  ha_voice_router.yaml  pyproject.toml  reconcilliation roadmap.md  snoozefest-manager-card.yaml  snoozefest_data.json  snoozefest_data_dev.json  snoozefest_scripts.yaml  snoozefest_workspace.code-workspace  time_picker_custom.js  timers-dashboard-updated.yaml
.github/: copilot-instructions.md
addon/: BUILD.md  Dockerfile  README.md  addon.yaml  config.prod.json  config.schema.json  run.sh
dashboard/: alarm_detail_card.yaml  alarm_list_card.yaml  ha_dashboard_alarm_detail_popup_card.yaml  ha_dashboard_alarms_simple_auto_list_card.yaml  ha_dashboard_timer_detail_popup_card.yaml  ha_dashboard_timers_auto_list_card.yaml  input_text.js  snoozefest_entity_card.js  snoozefest_multiline_text_input.js  time_picker_custom.backup-2026-03-31-195138.js  time_picker_custom.js  timer_detail_card.yaml  timer_list_card.yaml
voice/: ha_voice_router.yaml  (+11 more)
(+14 files in other folders)
