[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snoozefest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0",
    "click>=8.1",
    "tzdata>=2024.1",
]

[project.scripts]
snoozefest = "snoozefest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
